k8s-demo/nodejs-demo/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: $namespace
  labels:
    name: $namespace
    app: nodejs-demo
