k8s-demo/nodejs-demo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: $namespace
  name: nodejs-demo-$environment
  labels:
    app: nodejs-demo
    environment: $environment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-demo
      environment: $environment
  template:
    metadata:
      labels:
        app: nodejs-demo
        environment: $environment
    spec:
      containers:
        - name: nodejs-demo-$environment
          image: dschuldt/nodejs-demo:1.0
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: appconfig
              mountPath: /app/config/
              readOnly: true
        - name: telegraf
          image: dschuldt/telegraf
          ports:
            - name: prometheus
              containerPort: 9273
          volumeMounts:
            - name: appconfig
              mountPath: /telegraf.conf
              subPath: telegraf.conf
      volumes:
        - name: appconfig
          configMap:
            name: nodejs-demo-$environment
